--- a/main.css
+++ b/main.css
@@ -14,7 +14,11 @@ svg {
 h5 {
   font-weight: lighter;
   font-size: 13px;
-  padding-top: 50px;
+  padding-top: 20px;
+}
+
+h2 {
+  text-align: center;
 }
 
 #plot {
@@ -72,7 +76,7 @@ text {
 }
 
 .legend {
-  font-family: Arial, sans-serif;
+  font-family: Merriweather, sans-serif;
   font-size: 12px;
 }
 
@@ -91,6 +95,7 @@ text {
   display: flex;
   flex-direction: column;
   align-items: center;
+  align-content: center;
   margin-top: 10px;
 }
 
@@ -127,4 +132,9 @@ text {
   border-radius: 50%;
   cursor: pointer;
   margin-top: -6px;
+}
+
+#description-box {
+  margin-bottom: 20px;
+  height: 166px;
 }
